# lazy

./: .readthedocs.yaml  CHANGES.rst  CHANGES.txt  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  type-checker.yml
docs/: Makefile  conf.py  index.rst
docs/_static/: nature-plus.css
docs/moved/: index.html
lazy/: __init__.py  lazy.py  lazy.pyi  py.typed
lazy/examples/: example.py
lazy/tests/: test_lazy.py
