[metadata]
name = lazy
version = 1.5
description = Lazy attributes for Python objects
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
keywords = decorator, lazy, lazy attribute, descriptor, property',
author = Stefan H. Holek
author_email = stefan@epy.co.at
url = https://github.com/stefanholek/lazy
project_urls =
    Documentation = https://lazy.readthedocs.io/en/stable/
license = BSD-2-Clause

[options]
packages = find:
include_package_data = false
zip_safe = false
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
exclude =
    lazy.examples
    lazy.tests

[options.package_data]
lazy =
    lazy.pyi
    py.typed

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme

[egg_info]
tag_build = dev0

[bdist_wheel]
universal = true

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = true
